# spatial-math

./: .gitignore  changelog.txt  spatial-math.cabal  stack.yaml
src/Numeric/Spatial/: Angle.hs  DCM.hs  Euler.hs  Frame.hs  Matrix.hs  Quaternion.hs  Transform.hs  Vector.hs
src/Numeric/Spatial/Frame/: Body.hs  Ecef.hs  Enup.hs  Nedn.hs  Wind.hs
test/: test.hs
