name:                spatial-math
version:             0.6
synopsis:            Low-dimensional spatial math, including quaternions/euler angles/dcms and utility functions
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2012-2020, Greg Horn
category:            Math
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
                     changelog.txt

library
  default-language:    Haskell2010

  ghc-options:         -Wall -Werror

  exposed-modules:
      Numeric.Spatial.Angle
    , Numeric.Spatial.DCM
    , Numeric.Spatial.Euler
    , Numeric.Spatial.Frame
    , Numeric.Spatial.Frame.Body
    , Numeric.Spatial.Frame.Nedn
    , Numeric.Spatial.Frame.Enup
    , Numeric.Spatial.Frame.Ecef
    , Numeric.Spatial.Frame.Wind
    , Numeric.Spatial.Quaternion

    , Numeric.Spatial.Vector
    , Numeric.Spatial.Matrix
    , Numeric.Spatial.Transform

  default-extensions:
      TypeApplications
    , ScopedTypeVariables
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleContexts
    , FlexibleInstances
    , Rank2Types
    , RebindableSyntax
    , TypeOperators
    , TypeFamilies
    , DeriveFunctor

  build-depends:       
      base           >= 4.10    && < 5.0
    , lawz           >= 0.1.1   && < 1.0
    , adjunctions    >= 4.4     && < 5.0
    , connections    >= 0.0.3   && < 0.1
    , distributive   >= 0.3     && < 1.0
    , semigroupoids  >= 5.0     && < 6.0
    , rings          >= 0.0.3   && < 0.1

  hs-source-dirs:      src

test-suite test
  type: exitcode-stdio-1.0
  build-depends:       
      base           >= 4.10    && < 5.0
    , lawz           >= 0.1.1   && < 1.0
    , adjunctions    >= 4.4     && < 5.0
    , connections    >= 0.0.3   && < 0.1
    , distributive   >= 0.3     && < 1.0
    , semigroupoids  >= 5.0     && < 6.0
    , rings          >= 0.0.3   && < 0.1
    , spatial-math

  default-extensions:
      TypeApplications
    , ScopedTypeVariables
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleContexts
    , FlexibleInstances
    , RebindableSyntax
    , TypeOperators
    , TypeFamilies

  main-is: test.hs
